objects/AcctSeedERP__Shipment__c/fields/AcctSeedERP__Packing_Slip_Format__c.field-meta.xml
<CustomField>
    <fullName>AcctSeedERP__Packing_Slip_Format__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Packing Slip Format</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AcctSeed__Billing_Format__c.AcctSeed__Type__c</field>
            <operation>equals</operation>
            <value>Packing Slip</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AcctSeed__Billing_Format__c</referenceTo>
    <relationshipLabel>Shipments</relationshipLabel>
    <relationshipName>Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>