objects/AcctSeedERP__Shipment__c/fields/AcctSeedERP__Shipping_Comment__c.field-meta.xml
<CustomField>
    <fullName>AcctSeedERP__Shipping_Comment__c</fullName>
    <label>Shipping Comment</label>
    <type>TextArea</type>
</CustomField>