objects/AcctSeedERP__Shipment__c/fields/All_Delivery_checks_confirmed_from_Custo__c.field-meta.xml
<CustomField>
    <fullName>All_Delivery_checks_confirmed_from_Custo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Delivery checks confirmed from Custo</label>
    <type>Checkbox</type>
</CustomField>