objects/AcctSeedERP__Shipment__c/fields/Alternate_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Carrier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Alternate Carrier</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Shipments (Alternate Carrier)</relationshipLabel>
    <relationshipName>Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>