objects/AcctSeedERP__Shipment__c/fields/Alternatev_Carrier_Charges__c.field-meta.xml
<CustomField>
    <fullName>Alternatev_Carrier_Charges__c</fullName>
    <label>Alternate Carrier Charges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>