objects/AcctSeedERP__Shipment__c/fields/BOL_Prepared__c.field-meta.xml
<CustomField>
    <fullName>BOL_Prepared__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BOL Prepared</label>
    <type>Checkbox</type>
</CustomField>