objects/AcctSeedERP__Shipment__c/fields/Carrier_Charges_Finalised__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Charges_Finalised__c</fullName>
    <label>Carrier Charges Finalised</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>