objects/AcctSeedERP__Shipment__c/fields/Deliver__c.field-meta.xml
<CustomField>
    <fullName>Deliver__c</fullName>
    <label>Deliver</label>
    <length>255</length>
    <type>Text</type>
</CustomField>