objects/AcctSeedERP__Shipment__c/fields/Deliver_Date__c.field-meta.xml
<CustomField>
    <fullName>Deliver_Date__c</fullName>
    <label>Deliver Date</label>
    <type>Date</type>
</CustomField>