objects/AcctSeedERP__Shipment__c/fields/Deliver_Time__c.field-meta.xml
<CustomField>
    <fullName>Deliver_Time__c</fullName>
    <label>Deliver Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>