objects/AcctSeedERP__Shipment__c/fields/Delivery__c.field-meta.xml
<CustomField>
    <fullName>Delivery__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delivery Confirmed by Customer</label>
    <type>Checkbox</type>
</CustomField>