objects/AcctSeedERP__Shipment__c/fields/Driver_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Driver_Contact_Number__c</fullName>
    <label>Driver Contact Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>