objects/AcctSeedERP__Shipment__c/fields/Estimated_Shipment_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Shipment_Date__c</fullName>
    <label>Estimated Shipment Date</label>
    <type>Date</type>
</CustomField>