objects/AcctSeedERP__Shipment__c/fields/Estimated_Time_Slot_To__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Time_Slot_To__c</fullName>
    <label>Estimated Time Slot (To)</label>
    <type>Time</type>
</CustomField>