objects/AcctSeedERP__Shipment__c/fields/Freight_Class__c.field-meta.xml
<CustomField>
    <fullName>Freight_Class__c</fullName>
    <label>Freight Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>