objects/AcctSeedERP__Shipment__c/fields/Number_of_Pallets__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Pallets__c</fullName>
    <label>Number of Pallets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>