objects/AcctSeedERP__Shipment__c/fields/Other_Customer_Comments_Carrier_Notes__c.field-meta.xml
<CustomField>
    <fullName>Other_Customer_Comments_Carrier_Notes__c</fullName>
    <label>Other Customer Comments / Carrier Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>