objects/AcctSeedERP__Shipment__c/fields/Pallet_Count__c.field-meta.xml
<CustomField>
    <fullName>Pallet_Count__c</fullName>
    <label>Pallet Count</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>