objects/AcctSeedERP__Shipment__c/fields/Pallet_Dimensions__c.field-meta.xml
<CustomField>
    <fullName>Pallet_Dimensions__c</fullName>
    <label>Pallet Dimensions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>