objects/AcctSeedERP__Shipment__c/fields/Pickup_Loaction__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Loaction__c</fullName>
    <formula>AcctSeedERP__Sales_Order__r.AcctSeedERP__Shipping_Street__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pickup Loaction</label>
    <type>Text</type>
</CustomField>