objects/AcctSeedERP__Shipment__c/fields/POD_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>POD_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>POD Uploaded</label>
    <type>Checkbox</type>
</CustomField>