objects/AcctSeedERP__Shipment__c/fields/Receiving_Person_Contact__c.field-meta.xml
<CustomField>
    <fullName>Receiving_Person_Contact__c</fullName>
    <label>Receiving Person Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>