objects/AcctSeedERP__Shipment__c/fields/Receiving_Person_Name__c.field-meta.xml
<CustomField>
    <fullName>Receiving_Person_Name__c</fullName>
    <label>Receiving Person Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>