objects/AcctSeedERP__Shipment__c/fields/Shipment_Time__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Time__c</fullName>
    <label>Shipment Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>