objects/AcctSeedERP__Shipment__c/fields/Shipment_Time_Slot__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Time_Slot__c</fullName>
    <label>Shipment Time Slot (From)</label>
    <type>Time</type>
</CustomField>