objects/AcctSeedERP__Shipment__c/fields/Shipping_Comments__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Comments__c</fullName>
    <formula>AcctSeedERP__Sales_Order__r.AcctSeedERP__Opportunity__r.Special_Instruction__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Comments</label>
    <type>Text</type>
</CustomField>