objects/AcctSeedERP__Shipment__c/fields/SPOC_Number__c.field-meta.xml
<CustomField>
    <fullName>SPOC_Number__c</fullName>
    <label>SPOC Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>