objects/AcctSeedERP__Shipment__c/fields/Total_Pallet_Weight__c.field-meta.xml
<CustomField>
    <fullName>Total_Pallet_Weight__c</fullName>
    <formula>Pallet_Count__c  * 50</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Pallet Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>