objects/AcctSeedERP__Shipment__c/fields/Total_Tire_Weight__c.field-meta.xml
<CustomField>
    <fullName>Total_Tire_Weight__c</fullName>
    <formula>AcctSeedERP__Sales_Order__r.AcctSeedERP__Opportunity__r.TotalOpportunityQuantity  *  AcctSeedERP__Sales_Order__r.AcctSeedERP__Opportunity__r.SyncedQuote.Weight__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Tire Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>