objects/AcctSeedERP__Shipment__c/fields/Total_Weight__c.field-meta.xml
<CustomField>
    <fullName>Total_Weight__c</fullName>
    <label>Total Weight</label>
    <summarizedField>AcctSeedERP__Shipment_Line__c.Copy_of_Weight__c</summarizedField>
    <summaryForeignKey>AcctSeedERP__Shipment_Line__c.AcctSeedERP__Shipment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>