objects/AcctSeedERP__Shipment__c/validationRules/AcctSeedERP__Status_Is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>AcctSeedERP__Status_Is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(TEXT(AcctSeedERP__Status__c))</errorConditionFormula>
    <errorDisplayField>AcctSeedERP__Status__c</errorDisplayField>
    <errorMessage>Shipment: You must enter a Status.</errorMessage>
</ValidationRule>